--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='I am Gemini, a multimodal AI language model developed by Google. I am designed to understand and generate human language, answer questions, and provide information. I am trained on a massive dataset of text and code, and I am constantly learning and improving.')"
+       "AIMessage(content='I am Gemini, a large multi-modal model, trained by Google. I am designed to provide information and answer questions to the best of my ability.')"
       ]
      },
      "execution_count": 5,
@@ -411,8 +411,8 @@
        " 'subject': 'biology',\n",
        " 'tone': 'simple',\n",
        " 'response_json': '{\"1\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"2\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"3\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}}',\n",
-       " 'quiz': '### RESPONSE_JSON\\n{\"1\": {\"mcq\": \"What is the main focus of biology?\", \"options\": {\"a\": \"The study of rocks\", \"b\": \"The study of life\", \"c\": \"The study of weather\", \"d\": \"The study of history\"}, \"correct\": \"b\"}, \"2\": {\"mcq\": \"Which of the following is NOT a unifying theme in biology?\", \"options\": {\"a\": \"Cells\", \"b\": \"Evolution\", \"c\": \"Gravity\", \"d\": \"Energy processing\"}, \"correct\": \"c\"}, \"3\": {\"mcq\": \"What is the approximate age of life on Earth?\", \"options\": {\"a\": \"1 billion years\", \"b\": \"3.7 billion years\", \"c\": \"5 billion years\", \"d\": \"10 billion years\"}, \"correct\": \"b\"}, \"4\": {\"mcq\": \"Which of the following is NOT a subdiscipline of biology?\", \"options\": {\"a\": \"Molecular biology\", \"b\": \"Ecology\", \"c\": \"Geology\", \"d\": \"Physiology\"}, \"correct\": \"c\"}, \"5\": {\"mcq\": \"What is the role of organisms in an ecosystem?\", \"options\": {\"a\": \"To produce oxygen\", \"b\": \"To cycle nutrients and energy\", \"c\": \"To regulate temperature\", \"d\": \"To create new land\"}, \"correct\": \"b\"}}',\n",
-       " 'review': '### RESPONSE_JSON\\n{\"1\": {\"mcq\": \"What is the main focus of biology?\", \"options\": {\"a\": \"The study of the universe\", \"b\": \"The study of life\", \"c\": \"The study of chemistry\", \"d\": \"The study of physics\"}, \"correct\": \"b\"}, \"2\": {\"mcq\": \"Which of the following is NOT a unifying theme in biology?\", \"options\": {\"a\": \"Cells\", \"b\": \"Genes\", \"c\": \"Evolution\", \"d\": \"Gravity\"}, \"correct\": \"d\"}, \"3\": {\"mcq\": \"What is the process that explains the diversity of life on Earth?\", \"options\": {\"a\": \"Creationism\", \"b\": \"Evolution\", \"c\": \"Natural selection\", \"d\": \"Intelligent design\"}, \"correct\": \"b\"}, \"4\": {\"mcq\": \"Which of the following is a subdiscipline of biology that studies the structure and function of organisms?\", \"options\": {\"a\": \"Molecular biology\", \"b\": \"Anatomy\", \"c\": \"Evolutionary biology\", \"d\": \"Ecology\"}, \"correct\": \"b\"}, \"5\": {\"mcq\": \"How long ago did life emerge on Earth?\", \"options\": {\"a\": \"1 billion years ago\", \"b\": \"2 billion years ago\", \"c\": \"3.7 billion years ago\", \"d\": \"4.5 billion years ago\"}, \"correct\": \"c\"}}'}"
+       " 'quiz': '### RESPONSE_JSON\\n{\"1\": {\"mcq\": \"What is the scientific study of life called?\", \"options\": {\"a\": \"Physics\", \"b\": \"Biology\", \"c\": \"Chemistry\", \"d\": \"Geology\"}, \"correct\": \"b\"}, \"2\": {\"mcq\": \"Which of the following is NOT a unifying theme in biology?\", \"options\": {\"a\": \"Evolution\", \"b\": \"Energy processing\", \"c\": \"Quantum mechanics\", \"d\": \"Heredity\"}, \"correct\": \"c\"}, \"3\": {\"mcq\": \"What is the smallest unit of life?\", \"options\": {\"a\": \"Atom\", \"b\": \"Cell\", \"c\": \"Tissue\", \"d\": \"Organ\"}, \"correct\": \"b\"}, \"4\": {\"mcq\": \"Which of the following is an example of a eukaryotic organism?\", \"options\": {\"a\": \"Bacteria\", \"b\": \"Protists\", \"c\": \"Archaea\", \"d\": \"Fungi\"}, \"correct\": \"b\"}, \"5\": {\"mcq\": \"Approximately how long ago did life emerge on Earth?\", \"options\": {\"a\": \"1 billion years ago\", \"b\": \"2.7 billion years ago\", \"c\": \"3.7 billion years ago\", \"d\": \"4.7 billion years ago\"}, \"correct\": \"c\"}}',\n",
+       " 'review': '### RESPONSE_JSON\\n{\"1\": {\"mcq\": \"What is the central concept that unifies the field of biology?\", \"options\": {\"a\": \"The study of cells\", \"b\": \"The process of evolution\", \"c\": \"The importance of energy processing\", \"d\": \"The ability of organisms to regulate their internal environments\"}, \"correct\": \"d\"}, \"2\": {\"mcq\": \"Which of the following is NOT a major theme of biology?\", \"options\": {\"a\": \"Cell biology\", \"b\": \"Genetics\", \"c\": \"Evolution\", \"d\": \"Psychology\"}, \"correct\": \"d\"}, \"3\": {\"mcq\": \"What is the primary method used by biologists to study the world around them?\", \"options\": {\"a\": \"Observation\", \"b\": \"Experimentation\", \"c\": \"Hypothesis generation\", \"d\": \"Scientific method\"}, \"correct\": \"d\"}, \"4\": {\"mcq\": \"Approximately when did life emerge on Earth?\", \"options\": {\"a\": \"1 billion years ago\", \"b\": \"2 billion years ago\", \"c\": \"3.7 billion years ago\", \"d\": \"4.5 billion years ago\"}, \"correct\": \"c\"}, \"5\": {\"mcq\": \"Which of the following is NOT a type of organism studied by biologists?\", \"options\": {\"a\": \"Archaea\", \"b\": \"Bacteria\", \"c\": \"Viruses\", \"d\": \"Fungi\"}, \"correct\": \"c\"}}'}"
       ]
      },
      "execution_count": 24,
@@ -434,7 +434,7 @@
      "output_type": "stream",
      "text": [
       "### RESPONSE_JSON\n",
-      "{\"1\": {\"mcq\": \"What is the main focus of biology?\", \"options\": {\"a\": \"The study of rocks\", \"b\": \"The study of life\", \"c\": \"The study of weather\", \"d\": \"The study of history\"}, \"correct\": \"b\"}, \"2\": {\"mcq\": \"Which of the following is NOT a unifying theme in biology?\", \"options\": {\"a\": \"Cells\", \"b\": \"Evolution\", \"c\": \"Gravity\", \"d\": \"Energy processing\"}, \"correct\": \"c\"}, \"3\": {\"mcq\": \"What is the approximate age of life on Earth?\", \"options\": {\"a\": \"1 billion years\", \"b\": \"3.7 billion years\", \"c\": \"5 billion years\", \"d\": \"10 billion years\"}, \"correct\": \"b\"}, \"4\": {\"mcq\": \"Which of the following is NOT a subdiscipline of biology?\", \"options\": {\"a\": \"Molecular biology\", \"b\": \"Ecology\", \"c\": \"Geology\", \"d\": \"Physiology\"}, \"correct\": \"c\"}, \"5\": {\"mcq\": \"What is the role of organisms in an ecosystem?\", \"options\": {\"a\": \"To produce oxygen\", \"b\": \"To cycle nutrients and energy\", \"c\": \"To regulate temperature\", \"d\": \"To create new land\"}, \"correct\": \"b\"}}\n"
+      "{\"1\": {\"mcq\": \"What is the scientific study of life called?\", \"options\": {\"a\": \"Physics\", \"b\": \"Biology\", \"c\": \"Chemistry\", \"d\": \"Geology\"}, \"correct\": \"b\"}, \"2\": {\"mcq\": \"Which of the following is NOT a unifying theme in biology?\", \"options\": {\"a\": \"Evolution\", \"b\": \"Energy processing\", \"c\": \"Quantum mechanics\", \"d\": \"Heredity\"}, \"correct\": \"c\"}, \"3\": {\"mcq\": \"What is the smallest unit of life?\", \"options\": {\"a\": \"Atom\", \"b\": \"Cell\", \"c\": \"Tissue\", \"d\": \"Organ\"}, \"correct\": \"b\"}, \"4\": {\"mcq\": \"Which of the following is an example of a eukaryotic organism?\", \"options\": {\"a\": \"Bacteria\", \"b\": \"Protists\", \"c\": \"Archaea\", \"d\": \"Fungi\"}, \"correct\": \"b\"}, \"5\": {\"mcq\": \"Approximately how long ago did life emerge on Earth?\", \"options\": {\"a\": \"1 billion years ago\", \"b\": \"2.7 billion years ago\", \"c\": \"3.7 billion years ago\", \"d\": \"4.7 billion years ago\"}, \"correct\": \"c\"}}\n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"1\": {\"mcq\": \"What is the main focus of biology?\", \"options\": {\"a\": \"The study of rocks\", \"b\": \"The study of life\", \"c\": \"The study of weather\", \"d\": \"The study of history\"}, \"correct\": \"b\"}, \"2\": {\"mcq\": \"Which of the following is NOT a unifying theme in biology?\", \"options\": {\"a\": \"Cells\", \"b\": \"Evolution\", \"c\": \"Gravity\", \"d\": \"Energy processing\"}, \"correct\": \"c\"}, \"3\": {\"mcq\": \"What is the approximate age of life on Earth?\", \"options\": {\"a\": \"1 billion years\", \"b\": \"3.7 billion years\", \"c\": \"5 billion years\", \"d\": \"10 billion years\"}, \"correct\": \"b\"}, \"4\": {\"mcq\": \"Which of the following is NOT a subdiscipline of biology?\", \"options\": {\"a\": \"Molecular biology\", \"b\": \"Ecology\", \"c\": \"Geology\", \"d\": \"Physiology\"}, \"correct\": \"c\"}, \"5\": {\"mcq\": \"What is the role of organisms in an ecosystem?\", \"options\": {\"a\": \"To produce oxygen\", \"b\": \"To cycle nutrients and energy\", \"c\": \"To regulate temperature\", \"d\": \"To create new land\"}, \"correct\": \"b\"}}\n"
+      "{\"1\": {\"mcq\": \"What is the scientific study of life called?\", \"options\": {\"a\": \"Physics\", \"b\": \"Biology\", \"c\": \"Chemistry\", \"d\": \"Geology\"}, \"correct\": \"b\"}, \"2\": {\"mcq\": \"Which of the following is NOT a unifying theme in biology?\", \"options\": {\"a\": \"Evolution\", \"b\": \"Energy processing\", \"c\": \"Quantum mechanics\", \"d\": \"Heredity\"}, \"correct\": \"c\"}, \"3\": {\"mcq\": \"What is the smallest unit of life?\", \"options\": {\"a\": \"Atom\", \"b\": \"Cell\", \"c\": \"Tissue\", \"d\": \"Organ\"}, \"correct\": \"b\"}, \"4\": {\"mcq\": \"Which of the following is an example of a eukaryotic organism?\", \"options\": {\"a\": \"Bacteria\", \"b\": \"Protists\", \"c\": \"Archaea\", \"d\": \"Fungi\"}, \"correct\": \"b\"}, \"5\": {\"mcq\": \"Approximately how long ago did life emerge on Earth?\", \"options\": {\"a\": \"1 billion years ago\", \"b\": \"2.7 billion years ago\", \"c\": \"3.7 billion years ago\", \"d\": \"4.7 billion years ago\"}, \"correct\": \"c\"}}\n"
      ]
     }
    ],
@@ -473,7 +473,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1': {'mcq': 'What is the main focus of biology?', 'options': {'a': 'The study of rocks', 'b': 'The study of life', 'c': 'The study of weather', 'd': 'The study of history'}, 'correct': 'b'}, '2': {'mcq': 'Which of the following is NOT a unifying theme in biology?', 'options': {'a': 'Cells', 'b': 'Evolution', 'c': 'Gravity', 'd': 'Energy processing'}, 'correct': 'c'}, '3': {'mcq': 'What is the approximate age of life on Earth?', 'options': {'a': '1 billion years', 'b': '3.7 billion years', 'c': '5 billion years', 'd': '10 billion years'}, 'correct': 'b'}, '4': {'mcq': 'Which of the following is NOT a subdiscipline of biology?', 'options': {'a': 'Molecular biology', 'b': 'Ecology', 'c': 'Geology', 'd': 'Physiology'}, 'correct': 'c'}, '5': {'mcq': 'What is the role of organisms in an ecosystem?', 'options': {'a': 'To produce oxygen', 'b': 'To cycle nutrients and energy', 'c': 'To regulate temperature', 'd': 'To create new land'}, 'correct': 'b'}}\n"
+      "{'1': {'mcq': 'What is the scientific study of life called?', 'options': {'a': 'Physics', 'b': 'Biology', 'c': 'Chemistry', 'd': 'Geology'}, 'correct': 'b'}, '2': {'mcq': 'Which of the following is NOT a unifying theme in biology?', 'options': {'a': 'Evolution', 'b': 'Energy processing', 'c': 'Quantum mechanics', 'd': 'Heredity'}, 'correct': 'c'}, '3': {'mcq': 'What is the smallest unit of life?', 'options': {'a': 'Atom', 'b': 'Cell', 'c': 'Tissue', 'd': 'Organ'}, 'correct': 'b'}, '4': {'mcq': 'Which of the following is an example of a eukaryotic organism?', 'options': {'a': 'Bacteria', 'b': 'Protists', 'c': 'Archaea', 'd': 'Fungi'}, 'correct': 'b'}, '5': {'mcq': 'Approximately how long ago did life emerge on Earth?', 'options': {'a': '1 billion years ago', 'b': '2.7 billion years ago', 'c': '3.7 billion years ago', 'd': '4.7 billion years ago'}, 'correct': 'c'}}\n"
      ]
     }
    ],
@@ -512,21 +512,21 @@
     {
      "data": {
       "text/plain": [
-       "[{'MCQ': 'What is the main focus of biology?',\n",
-       "  'Choices': 'a: The study of rocks | b: The study of life | c: The study of weather | d: The study of history',\n",
+       "[{'MCQ': 'What is the scientific study of life called?',\n",
+       "  'Choices': 'a: Physics | b: Biology | c: Chemistry | d: Geology',\n",
        "  'Correct': 'b'},\n",
        " {'MCQ': 'Which of the following is NOT a unifying theme in biology?',\n",
-       "  'Choices': 'a: Cells | b: Evolution | c: Gravity | d: Energy processing',\n",
+       "  'Choices': 'a: Evolution | b: Energy processing | c: Quantum mechanics | d: Heredity',\n",
        "  'Correct': 'c'},\n",
-       " {'MCQ': 'What is the approximate age of life on Earth?',\n",
-       "  'Choices': 'a: 1 billion years | b: 3.7 billion years | c: 5 billion years | d: 10 billion years',\n",
+       " {'MCQ': 'What is the smallest unit of life?',\n",
+       "  'Choices': 'a: Atom | b: Cell | c: Tissue | d: Organ',\n",
        "  'Correct': 'b'},\n",
-       " {'MCQ': 'Which of the following is NOT a subdiscipline of biology?',\n",
-       "  'Choices': 'a: Molecular biology | b: Ecology | c: Geology | d: Physiology',\n",
-       "  'Correct': 'c'},\n",
-       " {'MCQ': 'What is the role of organisms in an ecosystem?',\n",
-       "  'Choices': 'a: To produce oxygen | b: To cycle nutrients and energy | c: To regulate temperature | d: To create new land',\n",
-       "  'Correct': 'b'}]"
+       " {'MCQ': 'Which of the following is an example of a eukaryotic organism?',\n",
+       "  'Choices': 'a: Bacteria | b: Protists | c: Archaea | d: Fungi',\n",
+       "  'Correct': 'b'},\n",
+       " {'MCQ': 'Approximately how long ago did life emerge on Earth?',\n",
+       "  'Choices': 'a: 1 billion years ago | b: 2.7 billion years ago | c: 3.7 billion years ago | d: 4.7 billion years ago',\n",
+       "  'Correct': 'c'}]"
       ]
      },
      "execution_count": 29,
@@ -564,7 +564,7 @@
     {
      "data": {
       "text/plain": [
-       "'03_15_2024_12_08_07'"
+       "'03_15_2024_15_21_18'"
       ]
      },
      "execution_count": 32,
